--- a/linux/debian/rules
+++ b/linux/debian/rules
@@ -31,3 +31,6 @@ override_dh_systemd_start:
 
 override_dh_systemd_enable:
 	dh_systemd_enable debian/mozillavpn/lib/systemd/system/mozillavpn.service
+
+override_dh_builddeb:
+	dh_builddeb -- -Zgzip
