--- a/linux/debian/control
+++ b/linux/debian/control
@@ -41,6 +41,7 @@ Vcs-Git: https://github.com/mozilla-mobile/mozilla-vpn-client
 Package: mozillavpn
 Architecture: any
 Depends: libcap2-bin (>=1:2.32),
+         libssl3 | libssl1.1,
          wireguard (>=1.0.20200319),
          wireguard-tools (>=1.0.20200319),
          libqt6quick6 (>=6.2.0~),
