Use CMake from bullseye-backports

--- a/taskcluster/docker/linux-qt6-build/Dockerfile
+++ b/taskcluster/docker/linux-qt6-build/Dockerfile
@@ -14,11 +14,14 @@ ENV CURL='curl --location --retry 5' \
     LANG='en_US.UTF-8' \
     TERM='dumb'
 
+## Enable buster-backports
+RUN echo "deb http://deb.debian.org/debian/ bullseye-backports main" > /etc/apt/sources.list.d/bullseye-backports.list
+RUN echo "deb-src http://deb.debian.org/debian/ bullseye-backports main" >> /etc/apt/sources.list.d/bullseye-backports.list
+
 RUN apt-get update -q
 RUN apt-get -y install tzdata
 RUN apt-get -y install build-essential \
                        clang \
-                       cmake \
                        curl \
                        debhelper \
                        devscripts \
@@ -58,6 +61,9 @@ RUN apt-get -y install libfontconfig1-dev \
                        libxcb-xkb-dev \
                        libxkbcommon-dev \
                        libxkbcommon-x11-dev
+
+## Install CMake from buster-backports
+RUN apt-get -y install -t bullseye-backports cmake
 
 #----------------------------------------------------------------------------------------------------------------------
 #-- Worker User -------------------------------------------------------------------------------------------------------
