--- a/linux/debian/rules
+++ b/linux/debian/rules
@@ -13,7 +13,7 @@ endif
 
 # Bring in some extras if building within a conda environment.
 ifneq ($(CONDA_PREFIX),)
-	export PKG_CONFIG_PATH := $(CONDA_PREFIX)
+	export PKG_CONFIG_PATH := $(CONDA_PREFIX)/lib/pkgconfig
 endif
 
 %:
