--- a/.github/workflows/auth_tests.yml
+++ b/.github/workflows/auth_tests.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
       - "releases/**"
+  pull_request:
+    branches:
+      - main
+      - "releases/**"
+
 
 # Restrict tests to the most recent commit.
 concurrency:
