--- a/.github/workflows/auth_tests.yml
+++ b/.github/workflows/auth_tests.yml
@@ -49,6 +49,9 @@ jobs:
 
   macos-unit-tests:
     runs-on: macos-latest
+    defaults:
+      run:
+        shell: bash -el {0}
     name: Run auth tests on MacOS
 
     steps:
