--- a/taskcluster/docker/linux-qt6-build/Dockerfile
+++ b/taskcluster/docker/linux-qt6-build/Dockerfile
@@ -68,11 +68,11 @@ RUN apt-get -y install libfontconfig1-dev \
 RUN apt-get -y install -t bullseye-backports cmake
 
 ## Install Rust
-RUN curl https://static.rust-lang.org/dist/rust-1.69.0-x86_64-unknown-linux-gnu.tar.gz \
-        -o /tmp/rust-1.69.0-x86_64-unknown-linux-gnu.tar.gz
-RUN tar -xf -C /tmp /tmp/rust-1.69.0-x86_64-unknown-linux-gnu.tar.gz
-RUN /tmp/rust-1.69.0-x86_64-unknown-linux-gnu/install.sh
-RUN rm -rf /tmp/rust-1.69.0-x86_64-unknown-linux-gnu /tmp/rust-1.69.0-x86_64-unknown-linux-gnu.tar.gz
+RUN mkdir -p /tmp/rust
+RUN curl https://static.rust-lang.org/dist/rust-1.69.0-x86_64-unknown-linux-gnu.tar.gz  -o /tmp/rust/rust-static.tar.gz
+RUN tar -C /tmp/rust -xf /tmp/rust/rust-static.tar.gz
+RUN $(find /tmp/rust -name 'install.sh')
+RUN rm -rf /tmp/rust
 
 ## Install Conda
 RUN curl https://repo.anaconda.com/pkgs/misc/gpgkeys/anaconda.asc | gpg --dearmor > /usr/share/keyrings/conda-archive-keyring.gpg
